agregue borde de arriba y abajo en el cuadro de ayuda

--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -104,7 +104,7 @@
                                                      styleClass="#{empty escuelaDashboardControlador.busqueda ? 'uk-input' : 'uk-input filtrar'}"
                                                      pt:placeholder="#{etiqueta['search']}"
                                                      value="#{escuelaDashboardControlador.busqueda}"
-                                                     pt:uk-tooltip="title: #{administracion['dashboard.search.tooltip']}; delay:1000">
+                                                     pt:uk-tooltip="title: #{administracion['dashboard.search.tooltip']}; delay:2000; pos:  right;">
                                         </h:inputText>
                                     </div>
                                 </h:form>
