--- a/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/dashboard.xhtml
@@ -43,9 +43,11 @@
         <h:panelGroup layout="block" styleClass="uk-grid uk-grid-divider uk-grid-medium uk-child-width-1-2 uk-child-width-1-4@l uk-child-width-1-5@xl" pt:data-uk-grid="">
             <div class="uk-text-center">
                 <span class="uk-text-small"><h:outputText pt:uk-icon="users" styleClass="uk-text-primary uk-margin-small-right"/>Alumnos Asignados</span>
-                <h1 class="uk-heading-primary uk-margin-remove  uk-text-primary">#{escuelaPoblacionControlador.totalAlumnos}</h1>
+                <h1 class="uk-heading-primary uk-margin-remove  uk-text-primary"><h:outputText value="#{escuelaPoblacionControlador.totalAlumnos}" id="total-alumnos"/></h1>
                 <div class="uk-text-small">
-                    <span class="uk-text-success">#{(initParam['alumno.licencia'])} 15%</span> utilizados.
+                    <h:outputText styleClass="uk-text-success" value="#{escuelaPoblacionControlador.totalAlumnos eq 0}%">
+                        <f:convertNumber type="number" maxIntegerDigits="3" maxFractionDigits="2"/>
+                    </h:outputText>  utilizados.
                 </div>
             </div>
             <div class="uk-text-center">
@@ -168,8 +170,11 @@
                                              footerClass="uk-background-primary"
                                              columnClasses=",,uk-text-center,uk-text-center,uk-text-center,uk-text-center">
                                     <h:column headerClass="uk-background-primary uk-width-small">
-                                        <f:facet name="header"><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.cct']}</span></f:facet>
-                                        #{escuela.claveCentroTrabajo}
+                                        <f:facet name="header"><h:outputText styleClass="letra-titulo" value="#{administracion['catalogoadministrativo.school.table.cct']}" pt:uk-tooltip="title:; delay:2000; pos: top"/></f:facet>
+                                        <h:commandLink styleClass="uk-link-reset" value="#{escuela.claveCentroTrabajo}" action="#{escuelaPoblacionControlador.actualiza}">
+                                            <f:setPropertyActionListener value="#{escuela.claveCentroTrabajo}" target="#{escuelaPoblacionControlador.claveCentroTrabajo}"/>
+                                            <f:ajax render="total-alumnos"/>
+                                        </h:commandLink>
                                     </h:column>
                                     <h:column headerClass="uk-background-primary">
                                         <f:facet name="header"><span class="letra-titulo">#{administracion['catalogoadministrativo.school.table.name']}</span></f:facet>
