se agrego la pagina de no existe

--- a/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
@@ -9,6 +9,17 @@
     <title>Página no encontrada</title>
 </h:head>
 <h:body>
-    Lo sentimos pápinga que esta intentando buscar no existe
+
+    <h:outputStylesheet library="css" name="/coordinador/no-encontrado.css"/>
+    <h:outputStylesheet library="css" name="letra.css"/>
+    <div class="flex-img">
+        <div class="parrafo-img">
+           <h1 class="lescuadron">Lo sentimos la pagina que esta intentando buscar no existe</h1>
+        </div>
+        <div class="fondo-img">
+        <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
+        </div>
+
+    </div>
 </h:body>
 </html>
