Agrega el boton para ingreso

--- a/tecolotl-web/src/main/webapp/ingreso.xhtml
+++ b/tecolotl-web/src/main/webapp/ingreso.xhtml
@@ -19,6 +19,7 @@
                            itemLabel="#{escuela.nombre}"
                            itemValue="#{escuela.claveCentroTrabajo}"/>
         </h:selectOneMenu>
+        <h:commandButton value="Ingresar"/>
     </h:form>
 </h:body>
 </html>
