--- a/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
@@ -14,7 +14,7 @@
     <h:outputStylesheet library="css" name="letra.css"/>
     <div class="flex-img">
         <div class="parrafo-img">
-           <h1 class="lescuadron">Lo sentimos la pagina que esta intentando buscar no existe</h1>
+           <h1 class="lescuadron">¡Ups, no encontré la página!</h1>
         </div>
         <div class="fondo-img">
         <h:graphicImage library="img" name="/fondo/no-existe.svg" uk-svg=""/>
