--- a/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
+++ b/tecolotl-web/src/main/webapp/error/no-encontrado.xhtml
@@ -10,7 +10,7 @@
 </h:head>
 <h:body>
 
-    <h:outputStylesheet library="css" name="/coordinador/no-encontrado.css"/>
+    <h:outputStylesheet library="css" name="/error/no-encontrado.css"/>
     <h:outputStylesheet library="css" name="letra.css"/>
     <div class="flex-img">
         <div class="parrafo-img">
