--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -11,5 +11,6 @@
 </h:head>
 <h:body>
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/>
+	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/>
 </h:body>
 </html>
