--- a/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
+++ b/tecolotl-web/src/main/webapp/administracion/coordinador.xhtml
@@ -39,11 +39,13 @@
         <h:outputStylesheet library="css" name="administracion/scroll-esquadron.css"/>
         <h:outputStylesheet library="css" name="administracion/dashboard.css"/>
         <div uk-grid="">
+            <span class="uk-text-bold">#{escuelaControlador.busca(param['escuela'])}</span>
+<!--        TODO estilios para la escuela actual    -->
             <div class="uk-width-1-1@s ">
                 <div class="uk-card uk-card-default uk-card-small uk-card-hover uk-margin-medium-bottom">
                     <div class="uk-card-header">
                         <div class="uk-grid uk-grid-small" uk-grid="">
-                            <div class="uk-width-auto"><h4><span class="uk-text-middle uk-text-capitalize">#{administracion['catalogocoordinador.title']}</span> : <span>#{administracion['dashboard.modal.name']}</span> <span class="uk-text-bold">#{escuelaControlador.busca(param['escuela'])}</span></h4></div>
+                            <div class="uk-width-auto"><h4><span class="uk-text-middle uk-text-capitalize">#{administracion['catalogocoordinador.title']}</span></h4></div>
                             <div class="uk-width-expand uk-text-right panel-icons">
                                 <h:form>
                                     <h:commandLink styleClass="uk-icon-button  uk-icon uk-text-primary" pt:uk-toggle="target: #modal-coordinador" >
